Agregando mis archivos html y css

--- a/proyectofinal.html
+++ b/proyectofinal.html
@@ -30,7 +30,7 @@
       <div class="tarjeta">
         <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/7c/Bee_types.gif/revision/latest?cb=20200414135118" alt="bee">
         <div class="nombre_tarjeta">
-          <p>Abeja</p>
+          <p>Abejas</p>
         </div>
       </div>
 
