He agregado color al fondo

--- a/proyectofinal.html
+++ b/proyectofinal.html
@@ -6,20 +6,20 @@
   </head>
   <body>
     <div>
-        <img id="logo_de_mc" src="imagenes/minecraft.png" alt="logo de minecraft">
+        <img id="logo_de_mc" src="imagenes1/minecraftbanner.jpg" alt="logo de minecraft">
     </div>
     <nav>
       <h1 id="logo">Catalogo de Animales</h1>
       <a href="">Criables</a>
-      <a href="">Domesticables</a>
-      <a href="">Artropodos</a>
-      <a href="">Bloques de Coral</a>
-      <a href="">No Clasificados</a>
+      <a href="domesticables.html">Domesticables</a>
+      <a href="artropodos.html">Artropodos</a>
+      <a href="bloquesdecoral.html">Bloques de Coral</a>
+      <a href="noclasificados.html">No Clasificados</a>
     </nav>
 
     <h1 id="logodos">Criables</h1>
 
-    <div>
+    <div class="contenedor">
       <div class="tarjeta">
         <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/9/99/Lucy_Axolotl_JE2.png/revision/latest?cb=20210402204139" alt="axolotl">
         <div class="nombre_tarjeta">
@@ -104,7 +104,97 @@
         </div>
       </div>
         
-      
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/4/4a/Creamy_Llama.png/revision/latest?cb=20190813075004" alt="llama">
+        <div class="nombre_tarjeta">
+          <p>Llama</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/1c/Red_Mooshroom_JE4.png/revision/latest?cb=20200510033824" alt="mooshroom">
+        <div class="nombre_tarjeta">
+          <p>Vaca Hongo</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/e/e7/Mule.png/revision/latest?cb=20190826141707" alt="mule">
+        <div class="nombre_tarjeta">
+          <p>Mula</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/0d/Ocelot.png/revision/latest?cb=20181102075937" alt="ocelot">
+        <div class="nombre_tarjeta">
+          <p>Ocelote</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/d/dc/Panda_JE1_BE1.png/revision/latest?cb=20200514014922" alt="panda">
+        <div class="nombre_tarjeta">
+          <p>Panda</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/1a/Pig_JE3_BE2.png/revision/latest?cb=20191229170841" alt="pig">
+        <div class="nombre_tarjeta">
+          <p>Cerdo</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/8/8d/Brown_Rabbit_JE2_BE2.png/revision/latest?cb=20190809185517" alt="rabbit">
+        <div class="nombre_tarjeta">
+          <p>Conejo</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/e/e2/White_Sheep_JE3_BE6.png/revision/latest?cb=20190809163123" alt="sheep">
+        <div class="nombre_tarjeta">
+          <p>Oveja</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/a/a6/Strider_JE2_BE2.gif/revision/latest?cb=20200618080058" alt="strider">
+        <div class="nombre_tarjeta">
+          <p>Strider</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/11/Tadpole_swimming.gif/revision/latest?cb=20211218125930" alt="tadpole">
+        <div class="nombre_tarjeta">
+          <p>Renacuajo</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/b/b2/Creamy_Trader_Llama.png/revision/latest?cb=20190201140317" alt="traderllama">
+        <div class="nombre_tarjeta">
+          <p>Llama Vendedora</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/e/e9/Turtle.png/revision/latest?cb=20180703145237" alt="turtle">
+        <div class="nombre_tarjeta">
+          <p>Tortuga</p>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/1c/Darkbrown_Horse.png/revision/latest?cb=20190716121815" alt="horse">
+        <div class="nombre_tarjeta">
+          <p>Lobo</p>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
