Agregue color al fondo, puse las tarjetas sin borde y Cambie algunos colores

--- a/artropodos.html
+++ b/artropodos.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>
-        <img id="logo_de_mc" src="imagenes1/minecraftbanner.jpg" alt="logo de minecraft">
+        <img id="logo_de_mc" src="imagenes1/minepc.png" alt="logo de minecraft">
     </div>
     <nav>
       <h1 id="logo">Catalogo de Animales</h1>
